# Qt-flow

./: .gitignore  README.md
1 less/: .gitignore  CMakeLists.txt  readme.md
1 less/1_chapter/: 1_01.cpp  1_prog.cpp
1 less/1_chapter/headers/: signal2.h  slots_signals_1.h
1 less/1_chapter/src/: signal2.cpp  slots_signals_1.cpp
1 less/2_chapter/: pointerOnFunc.cpp
1 less/2_chapter/signalsSlots/: .clang-format  .clang-tidy  CMakeLists.txt  mainwindow.cpp  mainwindow.h
1_chapter/: main.cpp
1_chapter/headers/: signalS3.h
1_chapter/src/: signalS3.cpp
2 less/: readme.md
2 less/doc/: 2_types_lib.drawio
3 less/: readme.md
